# TutorialesFisicaRadioterapia

./: .gitignore  README.md
Colab/: CalibracionModelosParametricosLineales.ipynb  CalibracionModelosParametricosNoLineales.ipynb  DVHs.xlsx  FundamentosColab.ipynb  IndiceGammaComparacionDistribuciones.ipynb  MontarDriveCargarDatos.ipynb  Plan.Sagital.Med.dxf  TutorialColabFísicaRadioterapia.ipynb  VisualizacionDistribucionesPlanaresDosis.ipynb
Colab/.ipynb_checkpoints/: CalibracionModelosParametricosLineales-checkpoint.ipynb  FundamentosColab-checkpoint.ipynb  TutorialColabFísicaRadioterapia-checkpoint.ipynb
Colab/LegPy/: EquivalenciaCamposCuadradosYRectangulares.ipynb
Enunciados/CalibracionAcelerador/: CalibracionAceleradorLineal.tex  README.md  pyproject.toml
Enunciados/CalibracionAcelerador/notebooks/: CalibracionAceleradorLineal.ipynb  CalibracionAceleradorLinealColabEnunciado.ipynb  CalibracionAceleradorLinealEnunciado.ipynb
Enunciados/CalibracionAcelerador/notebooks/.ipynb_checkpoints/: CalibracionAceleradorLineal-checkpoint.ipynb
Enunciados/CalibracionAcelerador/src/simcaliblinac/: pyproject.toml  simcaliblinac.py
Enunciados/CalibracionAcelerador/src/simcaliblinac/.ipynb_checkpoints/: simcaliblinac-checkpoint.py
Enunciados/ComparacionDistribucionesDosis/: DatosCalibracion.xlsx  Digital_signal_evaluation.dxf  DistribucionesDosisIndiceGammaPropuesta.ipynb  Dosis_Referencia.dxf
Enunciados/DobleFuente/: DobleFuente_Enunciado.ipynb
Talleres/: TallerCalibracionesIncertidumbres.ipynb  TallerDICOM.ipynb  synthManiquiCuba.ipynb
(+17 files in other folders)
